Completed chapter 1 with error.
Finished all tutorial for initialising vulkan but error with the entry point definition for the vkQueueSubmit2 function within vulkan_core.h

--- a/code/src/engine.vcxproj.filters
+++ b/code/src/engine.vcxproj.filters
@@ -97,5 +97,8 @@
     <Text Include="todo.txt">
       <Filter>Source Files</Filter>
     </Text>
+    <Text Include="notes.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
