Created a triangle mesh & updated to API 1.3.
Updated todo and notes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,8 @@ add_executable (engine
   vk_loader.cpp
   camera.cpp
   camera.h
+  mesh.h
+  mesh.cpp
 )
 
 set_property(TARGET engine PROPERTY CXX_STANDARD 20)
