--- a/code/src/imgui.ini
+++ b/code/src/imgui.ini
@@ -8,3 +8,68 @@ Pos=1129,14
 Size=550,576
 Collapsed=0
 
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=60,60
+Size=451,284
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=158,119
+Size=489,81
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=100,200
+Size=451,61
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=100,300
+Size=247,48
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=60,60
+Size=485,414
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=60,60
+Size=621,894
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=314,117
+Size=530,307
+Collapsed=0
+
+[Window][Dear ImGui Debug Log]
+Pos=60,60
+Size=456,156
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=60,60
+Size=353,894
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=60,60
+Size=570,126
+Collapsed=0
+
+[Window][Debug Overlay]
+Pos=60,60
+Size=205,65
+Collapsed=0
+
