--- a/code/src/engine.vcxproj.filters
+++ b/code/src/engine.vcxproj.filters
@@ -25,7 +25,7 @@
     <ClCompile Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\vk_loader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\camera.cpp">
+    <ClCompile Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\fish_camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\mesh.cpp">
@@ -69,7 +69,7 @@
     <ClInclude Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\vk_loader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\camera.h">
+    <ClInclude Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\fish_camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\mesh.h">
