Toyed around with ImGui a little.

--- a/code/src/imgui.ini
+++ b/code/src/imgui.ini
@@ -70,6 +70,16 @@ Collapsed=0
 
 [Window][Debug Overlay]
 Pos=20,12
-Size=326,287
+Size=360,97
+Collapsed=0
+
+[Window][Hierarchy]
+Pos=29,274
+Size=100,99
+Collapsed=0
+
+[Window][Scene]
+Pos=28,116
+Size=211,154
 Collapsed=0
 
